style: buttons no longer cutoff and tags can now be discarded

--- a/menu-app/src/app/restaurant-components/itemv2/itemv2.component.scss
+++ b/menu-app/src/app/restaurant-components/itemv2/itemv2.component.scss
@@ -20,9 +20,11 @@
     bottom: 5px;
     position: absolute;
 
-    &.bg-tint {
-      position: absolute;
-      bottom: 0px;
+    & .add-tag {
+      border-radius: 18px;
+      background-color: #ffffff;
+      color: #4c28ff;
+      padding: 8px 29px 8px 26px;
     }
   }
 }
@@ -84,7 +86,8 @@
 .edit-body {
   background-color: #f0f3f5;
   padding-bottom: 10px;
-  overflow: scroll;
+  height: calc(100% - 10px);
+  height: calc(100% - 10px);
 
   & .tag-container {
     position: relative;
